Meta+Packages: Rework package build system and start mongodb move.

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,10 @@
 # ====================================================================================
 
 # Database. ==========================================================================
-POSTGRES_PRISMA_ACCELERATE_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
+MONGODB_URI=
+POSTGRES_PRISMA_ACCELERATE_URL= # Legacy
+POSTGRES_PRISMA_URL=            # Legacy
+POSTGRES_URL_NON_POOLING=       # Legacy
 
 # Authentication. ====================================================================
 NEXTAUTH_SECRET=
