--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
         "toploader",
         "Trollhättan",
         "typecheck",
+        "uuidv",
         "Västra",
         "Vercel",
         "webp",
