--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -4,9 +4,9 @@
         "baseUrl": ".",
         "outDir": "./dist",
         "rootDir": "./src",
-        "typeRoots": ["./dist/index.d.ts"]
+        "typeRoots": ["dist/index.d.ts"]
     },
     "exclude": ["node_modules", "coverage", "dist", "**/*.test.*", "**/*.stories.*"],
-    "include": ["../../@types/declaration.d.ts"],
+    "include": ["src/@types", "../../@types/declaration.d.ts"],
     "references": [{ "path": "../../tsconfig.json" }]
 }
