--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,43 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "allowJs": true,
+        "allowJs": false,
+        "allowSyntheticDefaultImports": true,
         "composite": true,
+        "declaration": true,
         "declarationMap": true,
         "downlevelIteration": false,
         "esModuleInterop": true,
+        "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
-        "inlineSourceMap": false,
         "isolatedModules": true,
-        "jsx": "preserve",
         "lib": ["ESNext"],
         "module": "ESNext",
-        "moduleResolution": "Node",
         "moduleDetection": "force",
-        "noEmit": true,
+        "moduleResolution": "Bundler",
+        "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noUncheckedIndexedAccess": true,
-        "removeComments": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "paths": {},
+        "plugins": [],
+        "removeComments": false,
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
-        "strictBindCallApply": false,
+        "strictBindCallApply": true,
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "target": "ESNext",
-        "verbatimModuleSyntax": true
+        "typeRoots": ["./node_modules/@types"],
+        "types": [],
+        "useDefineForClassFields": true
     },
-    "exclude": [
-        "**/node_modules",
-        "**/dist",
-        "**/.turbo",
-        "**/storybook-static",
-        "**/coverage",
-        "**/build",
-        "**/public",
-        "**/*.test.*"
-    ]
+    "exclude": ["**/.turbo", "**/coverage", "**/*.stories.ts", "**/*.test.ts", "**/dist.*", "node_modules"],
+    "include": ["packages", "./packages/**/src/*.*", "@types/declaration.d.ts"],
+    "references": [{ "path": "./tsconfig.node.json" }]
 }
