--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
-    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
         "plugins": [{ "name": "next" }],
         "lib": ["DOM", "DOM.iterable", "ESNext"],
         "rootDir": "../../",
+        "jsx": "preserve",
+        "jsxImportSource": "react",
         "paths": {
             // Storefront.
             "@/middleware/*": ["src/middleware/*"],
@@ -17,27 +18,29 @@
             "@/styles/*": ["src/scss/*"],
             "@/auth": ["src/auth/auth.ts"],
             "@/auth/*": ["src/auth/*"],
-
             // i18n.
             "@/i18n/*": ["src/locales/*"],
             "@/i18n/dictionary": ["src/utils/dictionary.ts"],
-
             // Prismic.
             "@/slices/*": ["src/slices/*"],
             "@/slices": ["src/slices/index"],
             "@/prismic/types": ["prismicio-types.d.ts"],
-
             // Assets.
             "@/static/*": ["public/*"]
-        }
+        },
+        "allowJs": true,
+        "downlevelIteration": true,
+        "esModuleInterop": true,
+        "incremental": true,
+        "isolatedModules": true,
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "noEmit": true,
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "strict": false
     },
-    "include": [
-        "src/@types/declarations.d.ts",
-        "next-env.d.ts",
-        ".next/types/**/*.ts",
-        "prismicio-types.d.ts",
-        "prismicio.ts",
-        "src/@types",
-        "src"
-    ]
+    "exclude": ["node_modules"],
+    "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
+    "references": [{ "path": "../../tsconfig.json" }]
 }
