--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "type": "module",
     "packageManager": "bun@1.0.30",
     "engines": {
-        "node": ">=18 <=21"
+        "node": "<=21"
     },
     "cacheDirectories": [
         ".next/cache",
         "apps/**/.next/cache"
     ],
     "prettier": "@nordcom/prettier",
+    "workspaces": [
+        "apps/*",
+        "packages/*"
+    ],
     "scripts": {
         "prepare": "husky",
         "postinstall": "prisma generate --no-engine",
@@ -21,10 +25,11 @@
         "prebuild": "prisma generate --no-engine",
         "build": "dotenv -c -- turbo run build",
         "build:packages": "turbo run build --filter='./packages/*'",
+        "clean": "turbo run clean",
         "lint": "turbo run lint",
-        "prettier": "prettier **/src/**/*.{ts,tsx,js,scss} --check",
+        "prettier": "prettier **/src/**/*.{ts,tsx,scss} --check",
         "fix": "turbo run fix",
-        "fix:prettier": "prettier **/src/**/*.{ts,tsx,js,scss} --write",
+        "fix:prettier": "prettier **/src/**/*.{ts,tsx,json,scss} --write",
         "typecheck": "turbo run typecheck",
         "test": "turbo run test",
         "slicemachine": "turbo run slicemachine"
@@ -56,6 +61,9 @@
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
         "@prisma/client": "5.11.0",
+        "@types/node": "20.11.27",
+        "@types/react-dom": "18.2.22",
+        "@types/react": "18.2.66",
         "@typescript-eslint/eslint-plugin": "7.2.0",
         "@typescript-eslint/parser": "7.2.0",
         "@vitejs/plugin-react": "4.2.1",
@@ -63,29 +71,34 @@
         "babel-plugin-module-resolver": "5.0.0",
         "concurrently": "8.2.2",
         "dotenv-cli": "7.4.1",
-        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-jsdoc": "48.2.1",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prettier": "5.1.3",
-        "eslint-plugin-react": "7.34.0",
         "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-react": "7.34.0",
         "eslint-plugin-unused-imports": "3.1.0",
+        "eslint": "8.57.0",
         "husky": "9.0.11",
         "lint-staged": "15.2.2",
         "prettier": "3.2.5",
+        "prettier-eslint": "16.3.0",
         "prisma": "5.11.0",
-        "turbo": "1.12.5",
         "turbo-ignore": "1.12.5",
-        "typescript": "5.4.2"
+        "turbo": "1.12.5",
+        "typescript": "5.4.2",
+        "vite-plugin-dts": "3.7.3",
+        "vite-tsconfig-paths": "4.3.2",
+        "vite": "5.1.6"
     },
     "optionalDependencies": {
         "@rollup/rollup-darwin-arm64": "4.13.0",
         "@rollup/rollup-linux-x64-gnu": "4.13.0"
     },
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ]
+    "overrides": {
+        "@typescript-eslint/typescript-estree": "7.2.0",
+        "esbuild": "0.20.2",
+        "psl": "npm:@filiphsandstrom/psl@2.0.0"
+    }
 }
