--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://json.schemastore.org/package.json",
-    "name": "@nordcom/commerce-errors",
+    "name": "@nordcom/commerce-db",
     "version": "0.0.0",
     "private": true,
     "sideEffects": false,
@@ -48,16 +48,24 @@
     "bugs": {
         "url": "https://github.com/NordcomInc/commerce/issues"
     },
-    "homepage": "https://shops.nordcom.io/docs/",
+    "homepage": "https://shops.nordcom.io/",
     "files": [
         "dist"
     ],
-    "dependencies": {},
+    "dependencies": {
+        "@nordcom/commerce-errors": "workspace:*",
+        "mongoose": "8.2.2",
+        "monguito": "4.5.0",
+        "uuid": "9.0.1"
+    },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
+        "@types/node": "20.11.25",
         "concurrently": "8.2.2",
         "eslint": "8.57.0",
+        "mongodb-memory-server": "9.1.7",
         "rimraf": "5.0.5",
+        "server-only": "0.0.1",
         "typescript": "5.4.2",
         "vitest": "1.3.1"
     }
