--- a/packages/marketing-common/package.json
+++ b/packages/marketing-common/package.json
@@ -6,18 +6,23 @@
     "sideEffects": false,
     "type": "module",
     "prettier": "@nordcom/prettier",
-    "types": "./dist/src/index.d.ts",
-    "module": "./dist/src/index.ts",
+    "types": "./dist/index.d.ts",
+    "module": "./dist/index.ts",
     "exports": {
-        ".": "./dist/src/index.js",
+        ".": [
+            "./src/index.ts",
+            "./dist/index.js"
+        ],
         "./*": [
-            "./dist/src/*.js",
-            "./dist/src/*/index.js"
+            "./src/*.ts",
+            "./dist/*.js",
+            "./src/*/index.ts",
+            "./dist/*/index.js"
         ]
     },
     "scripts": {
-        "prebuild": "rimraf -g dist/*",
-        "build": "tsc",
+        "build": "tsc && vite build",
+        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "eslint",
         "typecheck": "tsc -noEmit",
         "test": "vitest run --coverage",
