--- a/packages/marketing-common/tsconfig.json
+++ b/packages/marketing-common/tsconfig.json
@@ -1,15 +1,12 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
-    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "src",
-        "outDir": "dist",
-        "plugins": [],
-        "lib": ["ESNext"],
-        "rootDir": ".",
-        "paths": {},
-        "noEmit": false,
-        "removeComments": false
+        "baseUrl": ".",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "typeRoots": ["./dist/index.d.ts"]
     },
-    "include": ["src/@types", "src"]
+    "exclude": ["node_modules", "coverage", "dist", "**/*.test.*", "**/*.stories.*"],
+    "include": ["../../@types/declaration.d.ts"],
+    "references": [{ "path": "../../tsconfig.json" }]
 }
