--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,6 +13,7 @@
         "start": "next start -p $PORT",
         "dev": "next dev",
         "build": "next build",
+        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
         "fix": "concurrently bun:fix:*",
@@ -74,9 +75,9 @@
         "@happy-dom/global-registrator": "13.2.1",
         "@nordcom/prettier": "0.1.1",
         "@testing-library/react": "14.2.1",
+        "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.22",
         "@types/react": "18.2.66",
-        "@types/nprogress": "0.2.3",
         "concurrently": "8.2.2",
         "critters": "0.0.22",
         "eslint-config-next": "14.1.3",
@@ -84,6 +85,7 @@
         "graphql": "16.8.1",
         "happy-dom": "13.8.5",
         "prettier": "3.2.5",
+        "rimraf": "5.0.5",
         "server-only": "0.0.1",
         "typescript": "5.4.2",
         "vitest": "1.3.1"
