--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
         "start": "next start -p $PORT",
         "dev": "next dev",
         "build": "next build",
+        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
         "fix": "concurrently bun:fix:*",
@@ -51,6 +52,7 @@
         "@million/lint": "0.0.73",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "workspace:*",
+        "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/nordstar": "0.0.43",
         "@prisma/client": "5.11.0",
@@ -94,9 +96,9 @@
         "@types/accept-language-parser": "1.5.6",
         "@types/convert-units": "2.3.9",
         "@types/lodash.debounce": "4.0.9",
-        "@types/react": "18.2.66",
-        "@types/react-dom": "18.2.22",
         "@types/nprogress": "0.2.3",
+        "@types/react-dom": "18.2.22",
+        "@types/react": "18.2.66",
         "concurrently": "8.2.2",
         "critters": "0.0.22",
         "eslint-config-next": "14.1.3",
@@ -104,6 +106,7 @@
         "graphql": "16.8.1",
         "happy-dom": "13.8.5",
         "prettier": "3.2.5",
+        "rimraf": "5.0.5",
         "server-only": "0.0.1",
         "slice-machine-ui": "1.25.0",
         "typescript": "5.4.2",
