--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,7 @@
 name: PRs
 
 on:
-    pull_request_target:
+    pull_request:
         types: [opened, synchronize, labeled]
 
 jobs:
@@ -11,23 +11,28 @@ jobs:
         permissions:
             contents: write
             pull-requests: write
-
         steps:
             - name: 🕶️ Checkout repository
               uses: actions/checkout@v4
               with:
-                  ref: 'refs/pull/${{ github.event.number }}/merge'
+                  fetch-depth: 0
+                  ref: ${{github.event.pull_request.head.ref}}
+                  repository: ${{github.event.pull_request.head.repo.full_name}}
 
-            - name: 📦 Install
-              uses: ./.github/common/install
+            - name: 📦 Pull from remote
+              run: git pull
 
-            - name: Commit files
+            - name: 🚀 Bootstrap
+              uses: ./.github/common/bootstrap
+
+            - name: 📦 Commit lockfile
               run: |
                   git config --local user.email "opensource@nordcom.io"
                   git config --local user.name "nordcombot"
-                  git commit -a -m "Deps: Update lockfile."
-            - name: Push changes
+                  git commit -a -m "Deps: Update lockfile." --no-verify
+
+            - name: 🚀 Push changes
               uses: ad-m/github-push-action@master
               with:
                   branch: ${{ github.head_ref }}
-                  github_token: ${{ secrets.MACHINE_USER }}
+                  github_token: ${{ secrets.NORDCOM_BOT_TOKEN }}
