Packages+db: Refactor how models work.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,7 @@
         "thirdparties",
         "timeframes",
         "toploader",
+        "treeshake",
         "Trollhättan",
         "typecheck",
         "uuidv",
