--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -53,9 +53,7 @@
     ],
     "dependencies": {
         "@nordcom/commerce-errors": "workspace:*",
-        "mongoose": "8.2.2",
-        "monguito": "4.6.0",
-        "uuid": "9.0.1"
+        "mongoose": "8.2.2"
     },
     "devDependencies": {
         "@nordcom/prettier": "0.1.1",
