--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -49,6 +49,7 @@
         "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "workspace:*",
+        "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
         "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.43",
