--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
+        "composite": true,
         "outDir": "./dist",
         "rootDir": "./src",
-        "typeRoots": ["dist/index.d.ts"]
+        "typeRoots": ["./node_modules/@types", "./src/@types", "./dist/index.d.ts"]
     },
     "exclude": ["node_modules", "coverage", "dist", "**/*.test.*"],
-    "include": ["src/@types", "../../@types/declaration.d.ts"],
+    "include": ["./src/@types"],
     "references": [{ "path": "../../tsconfig.json" }]
 }
