--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -38,7 +38,7 @@
         "noEmit": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "strict": false
+        "strict": true
     },
     "exclude": ["node_modules"],
     "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts", "next.config.mjs"],
