--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,6 @@
         "moduleResolution": "Bundler",
         "skipLibCheck": true
     },
+    "exclude": ["node_modules"],
     "include": ["./vite.config.ts", "packages/**/vite.config.ts"]
 }
