--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -44,8 +44,8 @@
     },
     "homepage": "https://admin.shops.nordcom.io/",
     "dependencies": {
+        "@auth/core": "0.28.0",
         "@million/lint": "0.0.73",
-        "@next-auth/prisma-adapter": "1.0.7",
         "@next/third-parties": "14.1.3",
         "@nordcom/commerce-database": "workspace:*",
         "@nordcom/commerce-db": "workspace:*",
@@ -59,7 +59,7 @@
         "colord": "2.9.3",
         "geist": "1.2.2",
         "million": "3.0.6",
-        "next-auth": "4.24.7",
+        "next-auth": "5.0.0-beta.15",
         "next-seo": "6.5.0",
         "next": "14.1.3",
         "nextjs-toploader": "1.6.6",
