--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -16,7 +16,7 @@
         "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
-        "fix": "concurrently bun:fix:*",
+        "fix": "concurrently pnpm:fix:*",
         "typecheck": "tsc -noEmit"
     },
     "author": {
@@ -61,6 +61,7 @@
         "next-seo": "6.5.0",
         "next": "14.1.4",
         "nextjs-toploader": "1.6.11",
+        "nprogress": "0.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.0.1",
         "react": "18.2.0",
