--- a/packages/marketing-common/package.json
+++ b/packages/marketing-common/package.json
@@ -58,6 +58,7 @@
         "@nordcom/prettier": "0.1.1",
         "concurrently": "8.2.2",
         "eslint": "8.57.0",
+        "glob": "10.3.10",
         "rimraf": "5.0.5",
         "typescript": "5.4.3",
         "vitest": "1.4.0"
