--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
         "strictPropertyInitialization": true,
         "target": "ESNext",
         "types": [],
+        "typeRoots": [],
         "useDefineForClassFields": true
     },
     "exclude": ["**/.turbo", "**/coverage", "**/*.stories.ts", "**/*.test.ts", "**/dist.*", "node_modules"],
