Admin: Try to fix login.

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ POSTGRES_PRISMA_URL=            # Legacy
 POSTGRES_URL_NON_POOLING=       # Legacy
 
 # Authentication. ====================================================================
-NEXTAUTH_SECRET=
+AUTH_SECRET=
 # Required, See github.com/nextauthjs/next-auth/issues/600#issuecomment-1784736042
 AUTH_TRUST_HOST=true
 # ====================================================================================
