--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -55,10 +55,10 @@
         "@prisma/client": "5.11.0",
         "@prisma/extension-accelerate": "1.0.0",
         "@shopify/shopify-api": "9.5.1",
-        "@vercel/otel": "1.6.2",
         "colord": "2.9.3",
         "geist": "1.2.2",
         "million": "3.0.6",
+        "mongoose": "8.2.3",
         "next-auth": "5.0.0-beta.15",
         "next-seo": "6.5.0",
         "next": "14.1.4",
