--- a/apps/web/.eslintrc
+++ b/apps/web/.eslintrc
@@ -11,5 +11,10 @@
                 }
             }
         }
-    ]
+    ],
+    "settings": {
+        "next": {
+            "rootDir": "apps/landing/"
+        }
+    }
 }
