CI: Set `AUTH_SECRET`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ env:
     POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL}}
     SHOPIFY_API_KEY: ${{ secrets.SHOPIFY_API_KEY }}
     SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
+    AUTH_SECRET: 'development-secret'
 
 jobs:
     build:
