Meta: Update packages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "toploader",
         "treeshake",
         "Trollhättan",
+        "tsbuildinfo",
         "typecheck",
         "uuidv",
         "Västra",
