--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -22,7 +22,7 @@
     },
     "scripts": {
         "build": "tsc && vite build",
-        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
+        "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "eslint",
         "fix": "eslint --fix",
         "typecheck": "tsc -noEmit"
