--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,13 +11,14 @@
     "prettier": "@nordcom/prettier",
     "scripts": {
         "start": "next start -p $PORT",
-        "dev": "next dev -p 4321",
+        "dev": "next dev",
         "build": "next build",
-        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
+        "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
         "fix": "concurrently pnpm:fix:*",
-        "typecheck": "tsc -noEmit"
+        "typecheck": "tsc -noEmit",
+        "slicemachine": "start-slicemachine"
     },
     "author": {
         "name": "Nordcom Group Inc.",
@@ -44,36 +45,57 @@
     },
     "homepage": "https://shops.nordcom.io/",
     "dependencies": {
-        "@markdoc/markdoc": "0.4.0",
-        "@markdoc/next.js": "0.3.7",
+        "@apollo/client": "3.9.10",
+        "@apollo/experimental-nextjs-app-support": "0.10.0",
         "@million/lint": "0.0.73",
         "@next/third-parties": "14.2.0",
+        "@nordcom/commerce-database": "workspace:*",
+        "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
-        "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.52",
+        "@prisma/client": "5.12.0",
+        "@prisma/extension-accelerate": "1.0.0",
+        "@prismicio/client": "7.4.0",
+        "@prismicio/next": "1.5.0",
+        "@prismicio/react": "2.7.3",
+        "@shopify/hydrogen-react": "2024.4.0",
+        "@vercel/analytics": "1.2.2",
         "@vercel/otel": "1.8.1",
+        "@vercel/speed-insights": "1.0.5",
+        "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
+        "convert-units": "2.3.4",
         "geist": "1.3.0",
-        "glob": "10.3.12",
+        "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
-        "gray-matter": "4.0.3",
+        "lodash.debounce": "4.0.8",
         "million": "3.0.6",
-        "next-seo": "6.5.0",
         "next": "14.2.0",
+        "next-auth": "4.24.7",
+        "next-seo": "6.5.0",
+        "next-sitemap": "4.2.3",
         "nextjs-toploader": "1.6.11",
         "nprogress": "0.2.0",
+        "png-to-ico": "2.1.8",
         "react-dom": "18.2.0",
         "react-icons": "5.0.1",
+        "react-lottie-player": "2.0.0",
         "react": "18.2.0",
         "sass": "1.75.0",
         "sharp": "0.33.3",
-        "sonner": "1.4.41"
+        "sonner": "1.4.41",
+        "the-new-css-reset": "1.11.2",
+        "use-context-selector": "1.4.4"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.2",
         "@nordcom/prettier": "0.1.1",
-        "@testing-library/jest-dom": "6.4.2",
+        "@slicemachine/adapter-next": "0.3.38",
         "@testing-library/react": "14.3.0",
+        "@testing-library/jest-dom": "6.4.2",
+        "@types/accept-language-parser": "1.5.6",
+        "@types/convert-units": "2.3.9",
+        "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
@@ -86,6 +108,7 @@
         "prettier": "3.2.5",
         "rimraf": "5.0.5",
         "server-only": "0.0.1",
+        "slice-machine-ui": "1.26.0",
         "typescript": "5.4.5",
         "vitest": "1.4.0"
     }
