--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://json.schemastore.org/package.json",
-    "name": "@nordcom/commerce-admin",
-    "version": "2.1.0",
+    "name": "@nordcom/commerce-storefront",
+    "version": "2.0.0",
     "private": true,
     "sideEffects": false,
     "type": "module",
@@ -13,11 +13,12 @@
         "start": "next start -p $PORT",
         "dev": "next dev",
         "build": "next build",
-        "clean": "rimraf -g dist coverage .turbo .next *.tsbuildinfo *.log node_modules",
+        "clean": "rimraf -g dist coverage .turbo .next .tsbuildinfo *.log",
         "lint": "next lint",
         "fix:lint": "next lint --fix",
         "fix": "concurrently pnpm:fix:*",
-        "typecheck": "tsc -noEmit"
+        "typecheck": "tsc -noEmit",
+        "slicemachine": "start-slicemachine"
     },
     "author": {
         "name": "Nordcom Group Inc.",
@@ -42,40 +43,59 @@
     "bugs": {
         "url": "https://github.com/NordcomInc/commerce/issues"
     },
-    "homepage": "https://admin.shops.nordcom.io/",
+    "homepage": "https://shops.nordcom.io/",
     "dependencies": {
-        "@auth/core": "0.29.0",
+        "@apollo/client": "3.9.10",
+        "@apollo/experimental-nextjs-app-support": "0.10.0",
         "@million/lint": "0.0.73",
         "@next/third-parties": "14.2.0",
         "@nordcom/commerce-database": "workspace:*",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
-        "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.52",
         "@prisma/client": "5.12.0",
         "@prisma/extension-accelerate": "1.0.0",
-        "@shopify/shopify-api": "9.7.0",
+        "@prismicio/client": "7.4.0",
+        "@prismicio/next": "1.5.0",
+        "@prismicio/react": "2.7.3",
+        "@shopify/hydrogen-react": "2024.4.0",
+        "@vercel/analytics": "1.2.2",
+        "@vercel/otel": "1.8.1",
+        "@vercel/speed-insights": "1.0.5",
+        "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
+        "convert-units": "2.3.4",
         "geist": "1.3.0",
+        "graphql-tag": "2.12.6",
+        "gravatar.js": "2.0.0",
+        "lodash.debounce": "4.0.8",
         "million": "3.0.6",
-        "mongoose": "8.3.1",
-        "next-auth": "5.0.0-beta.16",
-        "next-seo": "6.5.0",
         "next": "14.2.0",
+        "next-auth": "4.24.7",
+        "next-seo": "6.5.0",
+        "next-sitemap": "4.2.3",
         "nextjs-toploader": "1.6.11",
         "nprogress": "0.2.0",
+        "png-to-ico": "2.1.8",
+        "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.0.1",
-        "react": "18.2.0",
+        "react-lottie-player": "2.0.0",
         "sass": "1.75.0",
         "sharp": "0.33.3",
-        "sonner": "1.4.41"
+        "sonner": "1.4.41",
+        "the-new-css-reset": "1.11.2",
+        "use-context-selector": "1.4.4"
     },
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.2",
         "@nordcom/prettier": "0.1.1",
+        "@slicemachine/adapter-next": "0.3.38",
         "@testing-library/react": "14.3.0",
         "@testing-library/jest-dom": "6.4.2",
+        "@types/accept-language-parser": "1.5.6",
+        "@types/convert-units": "2.3.9",
+        "@types/lodash.debounce": "4.0.9",
         "@types/nprogress": "0.2.3",
         "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
@@ -88,6 +108,7 @@
         "prettier": "3.2.5",
         "rimraf": "5.0.5",
         "server-only": "0.0.1",
+        "slice-machine-ui": "1.26.0",
         "typescript": "5.4.5",
         "vitest": "1.5.0"
     }
