--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
         "target": "ESNext",
-        "types": [],
-        "typeRoots": [],
+        "types": ["node"],
+        "typeRoots": ["node_modules/@types", "./packages/**/src/@types"],
         "useDefineForClassFields": true
     },
     "exclude": ["**/.turbo", "**/coverage", "**/*.stories.ts", "**/*.test.ts", "**/dist.*", "node_modules"],
