Landing: Add missing packages.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -45,6 +45,7 @@
     },
     "homepage": "https://shops.nordcom.io/",
     "dependencies": {
+        "@auth/core": "0.29.0",
         "@apollo/client": "3.9.10",
         "@apollo/experimental-nextjs-app-support": "0.10.0",
         "@million/lint": "0.0.73",
@@ -52,6 +53,7 @@
         "@nordcom/commerce-database": "workspace:*",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
+        "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.52",
         "@prisma/client": "5.12.0",
         "@prisma/extension-accelerate": "1.0.0",
@@ -70,7 +72,7 @@
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
         "million": "3.0.6",
-        "next-auth": "4.24.7",
+        "next-auth": "5.0.0-beta.16",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
         "next": "14.2.0",
