--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -47,11 +47,13 @@
     "dependencies": {
         "@apollo/client": "3.9.10",
         "@apollo/experimental-nextjs-app-support": "0.10.0",
+        "@markdoc/markdoc": "0.4.0",
         "@million/lint": "0.0.73",
         "@next/third-parties": "14.2.0",
         "@nordcom/commerce-database": "workspace:*",
         "@nordcom/commerce-db": "workspace:*",
         "@nordcom/commerce-errors": "workspace:*",
+        "@nordcom/commerce-marketing-common": "workspace:*",
         "@nordcom/nordstar": "0.0.52",
         "@prisma/client": "5.12.0",
         "@prisma/extension-accelerate": "1.0.0",
@@ -66,14 +68,16 @@
         "colord": "2.9.3",
         "convert-units": "2.3.4",
         "geist": "1.3.0",
+        "glob": "10.3.12",
         "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
+        "gray-matter": "4.0.3",
         "lodash.debounce": "4.0.8",
         "million": "3.0.6",
-        "next": "14.2.0",
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
+        "next": "14.2.0",
         "nextjs-toploader": "1.6.11",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
