--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -48,6 +48,7 @@
         "@apollo/client": "3.9.10",
         "@apollo/experimental-nextjs-app-support": "0.10.0",
         "@markdoc/markdoc": "0.4.0",
+        "@markdoc/next.js": "0.3.7",
         "@million/lint": "0.0.73",
         "@next/third-parties": "14.2.0",
         "@nordcom/commerce-database": "workspace:*",
