Storefront: Update slice-machine config.

--- a/apps/web/slicemachine.config.json
+++ b/apps/web/slicemachine.config.json
@@ -9,5 +9,5 @@
     },
     "libraries": ["./src/slices/common", "./src/slices/navigation", "./src/slices/product"],
     "localSliceSimulatorURL": "http://localhost:3000/slice-simulator",
-    "repositoryName": "candy-by-sweden"
+    "repositoryName": "swedish-candy-store"
 }
