--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,7 +18,7 @@
         "fix:lint": "next lint --fix",
         "fix": "concurrently pnpm:fix:*",
         "typecheck": "tsc -noEmit",
-        "slicemachine": "start-slicemachine"
+        "slicemachine": "exit 0"
     },
     "author": {
         "name": "Nordcom Group Inc.",
@@ -57,9 +57,6 @@
         "@nordcom/nordstar": "0.0.52",
         "@prisma/client": "5.12.0",
         "@prisma/extension-accelerate": "1.0.0",
-        "@prismicio/client": "7.4.0",
-        "@prismicio/next": "1.5.0",
-        "@prismicio/react": "2.7.3",
         "@shopify/hydrogen-react": "2024.4.0",
         "@shopify/shopify-api": "9.7.1",
         "@vercel/analytics": "1.2.2",
@@ -93,7 +90,6 @@
     "devDependencies": {
         "@happy-dom/global-registrator": "13.2.2",
         "@nordcom/prettier": "0.1.1",
-        "@slicemachine/adapter-next": "0.3.38",
         "@testing-library/react": "14.3.0",
         "@testing-library/jest-dom": "6.4.2",
         "@types/accept-language-parser": "1.5.6",
@@ -111,7 +107,6 @@
         "prettier": "3.2.5",
         "rimraf": "5.0.5",
         "server-only": "0.0.1",
-        "slice-machine-ui": "1.26.0",
         "typescript": "5.4.5",
         "vitest": "1.5.0"
     }
