--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,7 @@
             "cache": false,
             "dependsOn": ["^build"]
         },
-        "fix": {
+        "format": {
             "cache": false
         },
         "slicemachine": {
