--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "globalDotEnv": [".env"],
+    "experimentalUI": true,
     "globalDependencies": [
         "**/.env.*local",
         "tsconfig.json",
@@ -23,6 +24,7 @@
         "dev": {
             "cache": false,
             "persistent": true,
+            "interactive": true,
             "dotEnv": [".env.development.local", ".env.local", ".env.development", ".env"]
         },
         "lint": {
