--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -70,10 +70,11 @@
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
         "million": "3.0.6",
+        "mongoose": "8.3.1",
         "next-auth": "5.0.0-beta.16",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
-        "next": "14.2.0",
+        "next": "14.2.1",
         "nextjs-toploader": "1.6.11",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
