--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -3,6 +3,8 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": ".",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "composite": true,
         "outDir": "./dist",
         "rootDir": "./src",
