--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -23,7 +23,7 @@
         "incremental": true,
         "isolatedModules": true,
         "module": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "Node10",
         "noEmit": true,
         "resolveJsonModule": true,
         "skipLibCheck": true,
