--- a/package.json
+++ b/package.json
@@ -84,10 +84,11 @@
         "eslint-plugin-simple-import-sort": "12.0.0",
         "eslint-plugin-unused-imports": "3.1.0",
         "eslint": "8.57.0",
+        "glob": "10.3.12",
         "husky": "9.0.11",
         "lint-staged": "15.2.2",
-        "prettier": "3.2.5",
         "prettier-eslint": "16.3.0",
+        "prettier": "3.2.5",
         "prisma": "5.12.0",
         "turbo-ignore": "1.13.2",
         "turbo": "1.13.2",
