--- a/packages/marketing-common/tsconfig.json
+++ b/packages/marketing-common/tsconfig.json
@@ -2,6 +2,8 @@
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
         "baseUrl": ".",
+        "module": "ESNext",
+        "moduleResolution": "Bundler",
         "outDir": "./dist",
         "rootDir": "./src",
         "typeRoots": ["./dist/index.d.ts"]
