--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "prepare": "husky || true",
         "predev": "prisma generate --no-engine",
         "dev": "dotenv -c -- turbo run dev",
+        "dev:admin": "dotenv -c -- turbo run dev --filter='./apps/admin'",
+        "dev:landing": "dotenv -c -- turbo run dev --filter='./apps/landing'",
+        "dev:storefront": "dotenv -c -- turbo run dev --filter='./apps/storefront'",
         "prebuild": "prisma generate --no-engine",
         "build": "pnpm run prebuild && dotenv -c -- turbo run build",
         "build:packages": "turbo run build --filter='./packages/*'",
