Meta: Remove otel.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
         "Sandström",
         "Siitam",
         "slicemachine",
+        "Sobolewski",
         "sonner",
         "Subframes",
         "sweetsideofsweden",
