--- a/apps/storefront/package.json
+++ b/apps/storefront/package.json
@@ -59,7 +59,6 @@
         "@prismicio/react": "2.7.4",
         "@shopify/hydrogen-react": "2024.4.0",
         "@vercel/analytics": "1.3.1",
-        "@vercel/otel": "1.8.1",
         "@vercel/speed-insights": "1.0.5",
         "accept-language-parser": "1.5.0",
         "colord": "2.9.3",
@@ -68,16 +67,17 @@
         "graphql-tag": "2.12.6",
         "gravatar.js": "2.0.0",
         "lodash.debounce": "4.0.8",
-        "next": "14.3.0-canary.4",
+        "mongoose": "8.3.1",
         "next-auth": "4.24.7",
         "next-seo": "6.5.0",
         "next-sitemap": "4.2.3",
+        "next": "14.3.0-canary.4",
         "nextjs-toploader": "1.6.12",
         "nprogress": "0.2.0",
         "png-to-ico": "2.1.8",
-        "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "5.1.0",
+        "react": "18.2.0",
         "sass": "1.77.2",
         "sharp": "0.33.4",
         "sonner": "1.4.41",
