--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "glob": "10.4.1",
         "husky": "9.0.11",
         "lint-staged": "15.2.5",
+        "mongoose": "8.4.0",
         "prettier-eslint": "16.3.0",
         "prettier": "3.2.5",
         "prisma": "5.12.0",
