--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "scripts": {
         "prepare": "husky || true",
         "predev": "prisma generate --no-engine",
-        "dev": "dotenv -c -- turbo run dev",
-        "dev:admin": "dotenv -c -- turbo run dev --filter='./apps/admin'",
-        "dev:landing": "dotenv -c -- turbo run dev --filter='./apps/landing'",
-        "dev:storefront": "dotenv -c -- turbo run dev --filter='./apps/storefront'",
+        "dev": "dotenv -c -- turbo run dev --env-mode=loose",
+        "dev:admin": "dotenv -c -- turbo run dev --filter='./apps/admin' --env-mode=loose",
+        "dev:landing": "dotenv -c -- turbo run dev --filter='./apps/landing' --env-mode=loose",
+        "dev:storefront": "dotenv -c -- turbo run dev --filter='./apps/storefront' --env-mode=loose",
         "prebuild": "prisma generate --no-engine",
-        "build": "pnpm run prebuild && dotenv -c -- turbo run build",
-        "build:packages": "turbo run build --filter='./packages/*'",
+        "build": "pnpm run prebuild && dotenv -c -- turbo run build --env-mode=loose",
+        "build:packages": "turbo run build --filter='./packages/*' --env-mode=loose",
         "clean": "turbo run clean",
         "lint": "turbo run lint",
         "prettier": "prettier **/src/**/*.{ts,tsx,scss} --check",
@@ -67,8 +67,8 @@
         "@nordcom/prettier": "0.1.1",
         "@prisma/client": "5.12.0",
         "@types/node": "20.12.7",
-        "@types/react-dom": "18.2.24",
         "@types/react": "18.2.75",
+        "@types/react-dom": "18.2.24",
         "@typescript-eslint/eslint-plugin": "7.6.0",
         "@typescript-eslint/parser": "7.6.0",
         "@vitejs/plugin-react": "4.3.1",
@@ -76,29 +76,29 @@
         "babel-plugin-module-resolver": "5.0.2",
         "concurrently": "8.2.2",
         "dotenv-cli": "7.4.2",
+        "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-jsdoc": "48.2.12",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-prettier": "5.1.3",
-        "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-react": "7.34.2",
+        "eslint-plugin-react-hooks": "4.6.0",
         "eslint-plugin-simple-import-sort": "12.1.0",
         "eslint-plugin-unused-imports": "4.0.0",
-        "eslint": "8.57.0",
         "glob": "10.4.1",
         "husky": "9.0.11",
         "lint-staged": "15.2.7",
         "mongoose": "8.4.0",
-        "prettier-eslint": "16.3.0",
         "prettier": "3.3.2",
+        "prettier-eslint": "16.3.0",
         "prisma": "5.12.0",
+        "turbo": "2.0.4",
         "turbo-ignore": "1.13.4",
-        "turbo": "1.13.4",
         "typescript": "5.4.5",
+        "vite": "5.3.1",
         "vite-plugin-dts": "3.8.3",
         "vite-tsconfig-paths": "4.3.2",
-        "vite": "5.3.1",
         "vitest": "1.5.0"
     },
     "optionalDependencies": {
@@ -109,5 +109,6 @@
         "@typescript-eslint/typescript-estree": "7.6.0",
         "esbuild": "0.21.5",
         "psl": "npm:@filiphsandstrom/psl@2.0.0"
-    }
+    },
+    "packageManager": "pnpm@9.4.0"
 }
